--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,16 +4,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, I am intrested parsing through my data-set and find all the different tags."
+    "Project Summary:\n",
+    "In this project, I use data wrangling techniques, such as assessing the quality of the data for validity, accuracy, completeness, consistency and uniformity, to clean OpenStreetMap data. Then I convert the dataset from XML to CSV format, import the cleaned .csv files into database, conduct SQL queries to provide a statistical overview of the dataset. Finally, I give some additional suggestions for improving and analyzing the data.\n",
+    "\n",
+    "Map Area:\n",
+    "Copenhagen,/Malmö\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split osm file into a smaller sample (SAMPLE_FILE). The original file (Copenhagen/Malmö) is 2GB."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "import xml.etree.ElementTree as ET  # Use cElementTree or lxml if too slow\n",
+    "\n",
+    "OSM_FILE = \"copenhagen_denmark.osm\"  # Replace this with your osm file\n",
+    "SAMPLE_FILE = \"sample.osm\"\n",
+    "\n",
+    "k = 10 # Parameter: take every k-th top level element\n",
+    "\n",
+    "def get_element(osm_file, tags=('node', 'way', 'relation')):\n",
+    "    \"\"\"Yield element if it is the right type of tag\n",
+    "\n",
+    "    Reference:\n",
+    "    http://stackoverflow.com/questions/3095434/inserting-newlines-in-xml-file-generated-via-xml-etree-elementtree-in-python\n",
+    "    \"\"\"\n",
+    "    context = iter(ET.iterparse(osm_file, events=('start', 'end')))\n",
+    "    _, root = next(context)\n",
+    "    for event, elem in context:\n",
+    "        if event == 'end' and elem.tag in tags:\n",
+    "            yield elem\n",
+    "            root.clear()\n",
+    "\n",
+    "\n",
+    "with open(SAMPLE_FILE, 'wb') as output:\n",
+    "    output.write('<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n')\n",
+    "    output.write('<osm>\\n  ')\n",
+    "\n",
+    "    # Write every kth top level element\n",
+    "    for i, element in enumerate(get_element(OSM_FILE)):\n",
+    "        if i % k == 0:\n",
+    "            output.write(ET.tostring(element, encoding='utf-8'))\n",
+    "\n",
+    "    output.write('</osm>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parse data-set and identify different tags."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'member': 5045,\n",
+      " 'nd': 396835,\n",
+      " 'node': 366941,\n",
+      " 'osm': 1,\n",
+      " 'relation': 498,\n",
+      " 'tag': 698563,\n",
+      " 'way': 50188}\n"
+     ]
+    }
+   ],
    "source": [
     "import xml.etree.cElementTree as ET\n",
     "import pprint\n",
@@ -28,7 +101,7 @@
     "    \n",
     "def test():\n",
     "\n",
-    "    tags = count_tags('copenhagen_denmark.osm 2')\n",
+    "    tags = count_tags(SAMPLE_FILE)\n",
     "    pprint.pprint(tags)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -36,30 +109,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df=open('copenhagen_denmark.osm 2', 'r')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will find out how many unique users have contributed to the map in this particular area( copenhagen and malmö)!"
+    "Unique users have contributed to the map in this particular area!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1317\n"
+     ]
+    }
+   ],
    "source": [
     "def process_map(filename):\n",
     "    users = set()\n",
@@ -71,12 +141,147 @@
     "\n",
     "def test():\n",
     "\n",
-    "    users = process_map('copenhagen_denmark.osm 2')\n",
-    "    pprint.pprint(users.head())\n",
-    "    assert len(users) == 6\n",
+    "    users = process_map(SAMPLE_FILE)\n",
+    "    pprint.pprint(len(users))\n",
+    "#    assert len(users) == 6\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I still am not sure if i need the following code!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "street_types= defaultdict(set)\n",
+    "expected= ['Street', 'Avenue', 'Boulevard', 'Drive', 'highway']\n",
+    "street_type_re = re.compile(r'∖b∖S+∖.?$', re.IGNORECASE)\n",
+    "def audit_street_type(street_types, street_name):\n",
+    "    m = street_type_re.search(street_name)\n",
+    "    if m:\n",
+    "        street_type= m.group()\n",
+    "        if street_type not in expected:\n",
+    "            street_types[street_type].add[street_name]\n",
+    "    \n",
+    "def is_street_name(elem):\n",
+    "    return( elem.attrib['k'] == \"highway\")\n",
+    "\n",
+    "def audit():\n",
+    "    for event, elem in ET.iterparse(SAMPLE_FILE, events=(\"start\",)):\n",
+    "        if elem.tag== 'k':\n",
+    "            for tag in elem.iter('tag'):\n",
+    "                if is_street_name(tag):\n",
+    "                    audit_street_type (street_types, tag.attrib['v'])\n",
+    "    pprint.pprint(dict(street_types)) \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    audit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-400804ca3a15>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-400804ca3a15>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    SELECT tags.value, COUNT(*) as count\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#select id, name, operator, railway, construction\n",
+    "#from planet_osm_point\n",
+    "#where name = 'Trafikplats Södra Sallerup'\n",
+    "\n",
+    "SELECT tags.value, COUNT(*) as count \n",
+    "FROM (SELECT * FROM nodes_tags \n",
+    "      UNION ALL \n",
+    "      SELECT * FROM ways_tags) tags\n",
+    "WHERE tags.key='postcode'\n",
+    "GROUP BY tags.value\n",
+    "ORDER BY count DESC;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking ‘k’ value for each tag. creating a dictionary of the three different tags.\n",
+    "Regular expressions: lower is for valid only-lowercase-letters tags. \n",
+    "lower_colon is for other valid tags with a colon in the value. \n",
+    "problemchars is for tags with problematic characters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'problemchars': 27, 'lower': 153243, 'other': 531, 'lower_colon': 544762}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower = re.compile(r'^([a-z]|_)*$')\n",
+    "lower_colon = re.compile(r'^([a-z]|_)*:([a-z]|_)*$')\n",
+    "problemchars = re.compile(r'[=\\+/&<>;\\'\"\\?%#$@\\,\\. \\t\\r\\n]')\n",
+    "\n",
+    "\n",
+    "def key_type(element, keys):\n",
+    "    if element.tag == \"tag\":\n",
+    "        if re.match(lower, element.attrib['k']):\n",
+    "            keys[\"lower\"] += 1\n",
+    "        elif re.match(lower_colon, element.attrib['k']):\n",
+    "            keys[\"lower_colon\"] += 1\n",
+    "        elif re.search(problemchars, element.attrib['k']):\n",
+    "            keys[\"problemchars\"] += 1\n",
+    "        else:\n",
+    "            keys['other'] += 1\n",
+    "    return keys\n",
+    "\n",
+    "\n",
+    "def process_map(filename):\n",
+    "    keys = {\"lower\": 0, \"lower_colon\": 0, \"problemchars\": 0, \"other\": 0}\n",
+    "    for _, element in ET.iterparse(filename):\n",
+    "        keys = key_type(element, keys)\n",
+    "\n",
+    "    return keys\n",
+    "\n",
+    "sf_all_keys = process_map(SAMPLE_FILE)\n",
+    "print sf_all_keys"
    ]
   },
   {
@@ -92,23 +297,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
