--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -153,12 +153,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I still am not sure if i need the following code!"
+    "one of the problem that was encountered in this dataset is from the street name abbreviation. \n",
+    "Building the regular expression to match the last element in the string, where usually the street type is based. Then based on the street abbreviation, create a mapping that need to be cleaned."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -175,58 +176,90 @@
     "import re\n",
     "\n",
     "street_types= defaultdict(set)\n",
-    "expected= ['Street', 'Avenue', 'Boulevard', 'Drive', 'highway']\n",
-    "street_type_re = re.compile(r'∖b∖S+∖.?$', re.IGNORECASE)\n",
+    "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
+    "\n",
+    "expected = [\"Street\", \"Avenue\", \"Boulevard\", \"Drive\", \"Court\", \"Place\", \"Square\", \"Lane\", \"Road\", \n",
+    "            \"Trail\", \"Parkway\", \"Commons\", \"Cove\", \"Alley\", \"Park\", \"Way\", \"Walk\" \"Circle\", \"Highway\", \n",
+    "            \"Plaza\", \"Path\", \"Center\", \"Mission\"]\n",
+    "\n",
+    "mapping = { \"Ave\": \"Avenue\",\n",
+    "            \"Ave.\": \"Avenue\",\n",
+    "            \"avenue\": \"Avenue\",\n",
+    "            \"ave\": \"Avenue\",\n",
+    "            \"Blvd\": \"Boulevard\",\n",
+    "            \"Blvd.\": \"Boulevard\",\n",
+    "            \"Blvd,\": \"Boulevard\",\n",
+    "            \"Boulavard\": \"Boulevard\",\n",
+    "            \"Boulvard\": \"Boulevard\",\n",
+    "            \"Ct\": \"Court\",\n",
+    "            \"Dr\": \"Drive\",\n",
+    "            \"Dr.\": \"Drive\",\n",
+    "            \"E\": \"East\",\n",
+    "            \"Hwy\": \"Highway\",\n",
+    "            \"Ln\": \"Lane\",\n",
+    "            \"Ln.\": \"Lane\",\n",
+    "            \"Pl\": \"Place\",\n",
+    "            \"Plz\": \"Plaza\",\n",
+    "            \"Rd\": \"Road\",\n",
+    "            \"Rd.\": \"Road\",\n",
+    "            \"St\": \"Street\",\n",
+    "            \"St.\": \"Street\",\n",
+    "            \"st\": \"Street\",\n",
+    "            \"street\": \"Street\",\n",
+    "            \"square\": \"Square\",\n",
+    "            \"parkway\": \"Parkway\"\n",
+    "            }\n",
+    "\n",
+    "\n",
     "def audit_street_type(street_types, street_name):\n",
     "    m = street_type_re.search(street_name)\n",
     "    if m:\n",
-    "        street_type= m.group()\n",
+    "        street_type = m.group()\n",
     "        if street_type not in expected:\n",
-    "            street_types[street_type].add[street_name]\n",
-    "    \n",
-    "def is_street_name(elem):\n",
-    "    return( elem.attrib['k'] == \"highway\")\n",
+    "            street_types[street_type].add(street_name)\n",
     "\n",
-    "def audit():\n",
-    "    for event, elem in ET.iterparse(SAMPLE_FILE, events=(\"start\",)):\n",
-    "        if elem.tag== 'k':\n",
-    "            for tag in elem.iter('tag'):\n",
+    "            \n",
+    "def is_street_name(elem):\n",
+    "    return (elem.attrib['k'] == \"addr:street\")\n",
+    "\n",
+    "\n",
+    "def audit(osmfile):\n",
+    "    osm_file = open(osmfile, \"r\")\n",
+    "    street_types = defaultdict(set)\n",
+    "    for event, elem in ET.iterparse(osm_file, events=(\"start\",)):\n",
+    "\n",
+    "        if elem.tag == \"node\" or elem.tag == \"way\":\n",
+    "            for tag in elem.iter(\"tag\"):\n",
     "                if is_street_name(tag):\n",
-    "                    audit_street_type (street_types, tag.attrib['v'])\n",
-    "    pprint.pprint(dict(street_types)) \n",
+    "                    audit_street_type(street_types, tag.attrib['v'])\n",
+    "    osm_file.close()\n",
+    "    return street_types\n",
+    "\n",
+    "\n",
+    "def update_name(name, mapping, regex):\n",
+    "    m = regex.search(name)\n",
+    "    if m:\n",
+    "        st_type = m.group()\n",
+    "        if st_type in mapping:\n",
+    "            name = re.sub(regex, mapping[st_type], name)\n",
+    "    return name\n",
+    "pprint.pprint(dict(street_types)) \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    audit()"
+    "    audit(SAMPLE_FILE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-400804ca3a15>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-400804ca3a15>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    SELECT tags.value, COUNT(*) as count\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#select id, name, operator, railway, construction\n",
     "#from planet_osm_point\n",
-    "#where name = 'Trafikplats Södra Sallerup'\n",
-    "\n",
-    "SELECT tags.value, COUNT(*) as count \n",
-    "FROM (SELECT * FROM nodes_tags \n",
-    "      UNION ALL \n",
-    "      SELECT * FROM ways_tags) tags\n",
-    "WHERE tags.key='postcode'\n",
-    "GROUP BY tags.value\n",
-    "ORDER BY count DESC;"
+    "#where name = 'Trafikplats Södra Sallerup'\n"
    ]
   },
   {
@@ -241,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
