Made a text suggestion on improving sidewalks on OpenStreetMap.

--- a/stockholm/OpenStreetMap Stockholm.ipynb
+++ b/stockholm/OpenStreetMap Stockholm.ipynb
@@ -919,8 +919,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion\n",
-    "From the process of auditing it is notable that the dataset is fairly well-cleaned even though there are some minor error such as inconsistent postal codes. Since there are thousands of contributing human users, so it is inevitable to have many human input error and because OpenStreetMaps is an open source project, there’re still a lot of areas either missed or outdated. This is applicable alos for my favourite city Stockholm. So I hope OpenStreetMaps can obtain these data from other open data sources. As an example I am very inspired by a very cool startup based in Malmö/Sweden called 'Mapillary'(a service for sharing geotagged photos)."
+    "Conclusion:\n",
+    "From the process of auditing, it is notable that the dataset is fairly well-cleaned even though there is some minor error such as inconsistent postal codes. Since there are thousands of contributing human users, so it is inevitable to have much human input error. In addition, OpenStreetMaps is an open source project hence there’re still a lot of areas either missed or outdated. This is applicable also to my favorite city Stockholm. So I hope OpenStreetMaps can obtain these data from other open data sources. As an example, I am very inspired by a very cool startup based in Malmö/Sweden called 'Mapillary'(a service for sharing geotagged photos).\n",
+    "I live in the south of Sweden, meaning that biking and walking are part of our daily life. It would be very interesting to have tags for sidewalks or bikeways included in the data. To emphasis on bike paths and walk paths for the convenience of end user, OpenStreetMap could map them properly. Its worth nothing that sometimes walk side are mistagged, as a park or other green areas. Hence the solution is new proper tags and correcting the already existing but mistagged tags."
    ]
   }
  ],
